# CorrectStaple

./: .gitignore  CMakeLists.txt  README.md
research_tools/: RESEARCH_README.md
src/: main.cpp
